--- a/src/scripts/osint/email_verifier/requirements.txt
+++ b/src/scripts/osint/email_verifier/requirements.txt
@@ -1,4 +1,7 @@
-certifi==2020.6.20
-chardet==3.0.4
-idna==2.10
-verify_email==2.4.1
+aiodns==2.0.0
+aiosmtpd==1.2
+atpublic==1.0
+cffi==1.14.0
+pycares==3.1.1
+pycparser==2.20
+verify-email==2.4.1
