--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,8 @@ mmh3==2.5.1
 multidict==4.7.6
 pycares==3.1.1
 pycparser==2.20
-requests~=2.22.0
+requests==2.24.0
 urllib3==1.25.9
 verify-email==2.4.1
 yarl==1.4.2
-
 phonenumbers~=8.12.6
