Improvements - skip not applicable scripts, fix workers system (#39)
* Fix executors

* Optimize imports

* Add results to gitignore

* Add 'required' field to define required args

* Ignore results from 'results' directory

* Add 'required' field to base classes

* Skip not applicable scripts

* Fix quantity of processes

* Set the execution timeout to 5 mins per case

* Add phone case to the examples

* JSON Russian language and encoding support

* Add core default values

* Remove hardcoded quantity of workers

* Increase quantity of cases up to 10

* Fix indentation in runner

* Add seed (initial) data to scan for

--- a/example_scenario.yaml
+++ b/example_scenario.yaml
@@ -18,12 +18,37 @@
   kwargs:
     url: https://facebook.com
 - case: recon
+  name: vk-website
+  description: Recon example for 'vk.com' website
+  kwargs:
+    url: https://vk.com
+- case: recon
+  name: mail-website
+  description: Recon example for 'mail.ru' website
+  kwargs:
+    url: https://mail.ru
+- case: recon
   name: 8-8-8-8-host
   description: Recon example for '8.8.8.8' host
   kwargs:
     ip: 8.8.8.8
 - case: recon
+  name: 92-63-64-162-host
+  description: Recon example for '92.63.64.162' host
+  kwargs:
+    ip: 92.63.64.162
+- case: recon
   name: 13-91-95-74-host
   description: Recon example for '13.91.95.74' host
   kwargs:
     ip: 13.91.95.74
+- case: recon
+  name: 87-240-190-78-host
+  description: Recon example for '87.240.190.78' host
+  kwargs:
+    ip: 87.240.190.78
+- case: osint
+  name: phone-check
+  description: check information about the phone number
+  kwargs:
+    phone: 89138111111
