--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ aiosmtpd==1.2
 async-timeout==3.0.1
 atpublic==1.0
 attrs==19.3.0
+beautifulsoup4==4.9.1
+bs4==0.0.1
 certifi==2020.6.20
 cffi==1.14.0
 chardet==3.0.4
@@ -15,6 +17,7 @@ pycares==3.1.1
 pycparser==2.20
 PyYAML==5.3.1
 requests==2.24.0
+soupsieve==2.0.1
 urllib3==1.25.9
 verify-email==2.4.1
 yarl==1.4.2
