--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ pycparser==2.20
 PyYAML==5.3.1
 requests==2.24.0
 soupsieve==2.0.1
+SQLAlchemy==1.3.18
+tornado==6.0.4
 urllib3==1.25.9
 verify-email==2.4.1
 yarl==1.4.2
