--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiodns==2.0.0
 aiohttp==3.6.2
 aiosmtpd==1.2
+art==4.7
 async-timeout==3.0.1
 atpublic==1.0
 attrs==19.3.0
@@ -9,15 +10,25 @@ bs4==0.0.1
 certifi==2020.6.20
 cffi==1.14.0
 chardet==3.0.4
+colorama==0.4.3
+commonmark==0.9.1
 idna==2.10
 mmh3==2.5.1
 multidict==4.7.6
 phonenumbers==8.12.7
+psycopg2-binary==2.8.5
 pycares==3.1.1
 pycparser==2.20
+Pygments==2.6.1
 PyYAML==5.3.1
 requests==2.24.0
+rich==5.1.2
+six==1.15.0
 soupsieve==2.0.1
+SQLAlchemy==1.3.18
+SQLAlchemy-Utils==0.36.8
+tornado==6.0.4
+typing-extensions==3.7.4.2
 urllib3==1.25.9
 verify-email==2.4.1
 yarl==1.4.2
