--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,16 @@ idna==2.10
 mmh3==2.5.1
 multidict==4.7.6
 phonenumbers==8.12.7
+psycopg2-binary==2.8.5
 pycares==3.1.1
 pycparser==2.20
 PyYAML==5.3.1
 requests==2.24.0
+six==1.15.0
 soupsieve==2.0.1
+SQLAlchemy==1.3.18
+SQLAlchemy-Utils==0.36.8
+tornado==6.0.4
 urllib3==1.25.9
 verify-email==2.4.1
 yarl==1.4.2
