--- a/requirements.txt
+++ b/requirements.txt
@@ -23,12 +23,13 @@ Pygments==2.6.1
 PyYAML==5.3.1
 requests==2.24.0
 rich==5.1.2
+selenium==3.141.0
 six==1.15.0
 soupsieve==2.0.1
 SQLAlchemy==1.3.18
 SQLAlchemy-Utils==0.36.8
 tornado==6.0.4
 typing-extensions==3.7.4.2
-urllib3==1.25.9
+urllib3==1.25.10
 verify-email==2.4.1
 yarl==1.4.2
