--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ ipwhois==1.1.0
 mmh3==2.5.1
 multidict==4.7.6
 phonenumbers==8.12.7
+pika==1.1.0
 psycopg2-binary==2.8.5
 pycares==3.1.1
 pycparser==2.20
